--- a/style.css
+++ b/style.css
@@ -3,8 +3,40 @@
     margin: 0;
     padding: 0;
   }
+  @media (min-width:320px) {
+    .container{
+      width:100%;
+    }
+    .form{
+      width:80%;
+    }
+    .row{
+      width:90%;
+    }
+  }
+  @media (min-width:600px) {
+    .container{
+      width:100%;
+    }
+    .form{
+      width:80%;
+    }
+    .row{
+      width:80%;
+    }
+  }
+  @media (min-width:1025px) {
+    .container{
+      width:100%;
+    }
+    .form{
+      width:40%;
+    }
+    .row{
+      width:70%;
+    }
+  }
   .container{
-    width:100%;
     margin:auto;
   }
   @font-face {
@@ -13,15 +45,11 @@
  }
   .content{
     width:100%;
-    height:100vh;
-    display:flex;
-    align-items: center;
-    justify-content: center;
+    padding: 8% 0;
     background-color: #68ababba;
     font-family: myFirstFont;
   }
   .row{
-    width:70%;
     margin:auto;
     background-color: #fff539;
   }
@@ -35,6 +63,7 @@
     border:none;
     width:100%;
     height:50px;
+    text-align:justify;
   }
   .col-1 label{
     width: 100%;
@@ -42,7 +71,6 @@
     padding: 10px 10px 14px 11px;
   }
   .form{
-    width:40%;
     margin:auto;
     padding-bottom: 25px;
 
